@@ -1,3 +1,8 @@
+2014-09-16  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* src/pj_gridinfo.c, pj_apply_vgridshift.c, pj_apply_gridshift.c:
+	Fix problems with NTv2 files with improper parent structure (#177).
+
 2014-09-13  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* Generate 4.9.0 release.
